--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/justin-zhang/vite.svg" />
+    <link rel="icon" type="image/png" href="/justin-zhang/uw.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Justin Zhang (UW TRON '27)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <script type="module" crossorigin src="/justin-zhang/assets/index.b928fce8.js"></script>
+    <script type="module" crossorigin src="/justin-zhang/assets/index.20889068.js"></script>
     <link rel="stylesheet" href="/justin-zhang/assets/index.afce1f36.css">
   </head>
   <body>
